js262/test/language/module-code/export-default-generator-declaration-binding-exists.js


/*---
description: >
  ExportDeclaration : HoistableDeclaration : GeneratorDeclaration
  esid: prod-HoistableDeclaration
info: |
  ExportDeclaration :
    HoistableDeclaration[Yield, Await, Default]:

  HoistableDeclaration[Yield, Await, Default]:
    GeneratorDeclaration[?Yield, ?Await, ?Default]

flags: [module]
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

class G {}
export default function * G() {}
